<resources>
    <string name="app_name">知聊</string>
    <string name="sign_in_title">用户登录</string>
    <string name="sign_up_title">用户注册</string>
    <string name="sign_username">请输入用户名：</string>
    <string name="sign_password">请输入密码：</string>
    <string name="second_password">请再次重复密码：</string>
    <string name="sign_in_button">登录</string>
    <string name="sign_up_button">注册</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_login_link"><u>以老师的身份注册</u></string>
</resources>