<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_In_Activity">

    <!-- 背景框 -->
    <TextView
        android:id="@+id/sign_in_bg"
        android:layout_width="322dp"
        android:layout_height="421dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        tools:ignore="MissingConstraints"
        android:background="@drawable/sign_in_bg"
        />



    <!-- 标题 -->
    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_title"
        android:textColor="@color/black"
        android:textSize="19dp"

        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@+id/sign_in_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_in_bg"
        app:layout_constraintVertical_bias="0.096" />


    <!-- 用户名填入框 -->
    <EditText
        android:id="@+id/SignInUsername"
        android:layout_width="218dp"
        android:layout_height="43dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="text"
        android:gravity="center"
        android:hint="@string/sign_username"
        app:layout_constraintBottom_toTopOf="@+id/SignInPassword"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_bg"
        app:layout_constraintStart_toStartOf="@+id/sign_in_bg"
        app:layout_constraintTop_toTopOf="@+id/sign_in_bg"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/sign_in_text_bg"
        />

    <!-- 密码填入框 -->
    <EditText
        android:id="@+id/SignInPassword"
        android:layout_width="218dp"
        android:layout_height="43dp"
        android:background="@drawable/sign_in_text_bg"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/sign_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_bg"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/sign_in_bg"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_bg"
        app:layout_constraintEnd_toStartOf="@+id/SignInButton"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="@+id/sign_in_bg"
        app:layout_constraintTop_toBottomOf="@+id/SignInPassword"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/sign_in_button"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_bg"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_bg"
        app:layout_constraintTop_toBottomOf="@+id/SignInPassword"
        app:layout_constraintVertical_bias="0.503" />

</androidx.constraintlayout.widget.ConstraintLayout>